@@ -1,4 +1,12 @@
-2006-05-17 Patrick Galbraith <patg@mysql.com) (3.0003_2)
+2006-05-17 Patrick Galbraith <patg@mysql.com) (3.0005_1)
+  * Fix dbd_st_finish in 3.0004 didn't clean up bind buffers resulting in
+    a memory leak. See eg/prepare_memory_usage.pl to see how this manifests
+    itself. Thanks to Jason Snell for giving me a good script to reproduce
+    this!
+  * Fix to parse_params, mysql.xs dbh->do, and bind_param to deal with
+    passing substr to "do" for placeholder value.
+
+2006-05-17 Patrick Galbraith <patg@mysql.com) (3.0004_1)
   * Fix dbd_st_finish which closed the handle prematurely (Martin Evans)
   * Compile issues (Martin Evans)
   * Small change to get utf8 data returned. One still has to:
